Closed Bug 849198 Opened 11 years ago Closed 11 years ago

nsPluginSafety.h compilation failure on mingw

Categories

(Core Graveyard :: Plug-ins, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla22

People

(Reporter: jacek, Assigned: jacek)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch fix (obsolete) — Splinter Review
GCC can't handle forward enum declaration like:

enum NSPluginCallReentry;

That enum requires previous proper declaration, which is in nsNPAPIPluginInstance.h. It means that nsNPAPIPluginInstance.h needs to be included before nsPluginSafety.h, which seems to be maintained in the code, with an exception of recent brackage in nsPluginNativeWindowWin.cpp (which is tested only with MSVC). Instead of making sure includes are done in the right order, it seems cleaner to simply include nsNPAPIPluginInstance.h in nsPluginSafety.h.

BTW, I was also considering merging nsPluginSafety.h into nsNPAPIPluginInstance.h, since nsPluginSafety.h is pretty small and doesn't relly need a separate header. If that would be prefferable, let me know.
Attachment #722756 - Flags: review?(robert)
(In reply to Jacek Caban from comment #0)
> BTW, I was also considering merging nsPluginSafety.h into
> nsNPAPIPluginInstance.h, since nsPluginSafety.h is pretty small and doesn't
> relly need a separate header. If that would be prefferable, let me know.

Yes, let's do that please. Thanks!!!
OK, here is a patch moving nsPluginSafety.h's content into nsNPAPIPluginInstance.h. I ran it through try to make sure I didn't miss anything:

https://tbpl.mozilla.org/?tree=Try&rev=68a4935765de
Attachment #722756 - Attachment is obsolete: true
Attachment #722756 - Flags: review?(robert)
Attachment #723465 - Flags: review?(roc)
https://hg.mozilla.org/mozilla-central/rev/80e584c6ac74
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: