Bug 849198 - Merge nsPluginSafety.h into nsNPAPIPluginInstance.h r=roc

--HG--
extra : rebase_source : b5e71211edce0b30f92033010d47b9a303f2c3bf